Fix 1.16.5 build: drop SLF4J and use Java-8 compatible file reading